@startuml

title __MODEL's Class Diagram__\n

  namespace edu.pfe.staffing {
    namespace model {
      class edu.pfe.staffing.model.Assignment {
          - day : int
          - id : long
          - month : int
          - user_score : int
          + Assignment()
          + getDay()
          + getId()
          + getMonth()
          + getPlanning()
          + getProject()
          + getUser_score()
          + setDay()
          + setId()
          + setMonth()
          + setPlanning()
          + setProject()
          + setUser_score()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace model {
      class edu.pfe.staffing.model.Global {
          - id : long
          - maxmatcle : long
          + getId()
          + getMaxmatcle()
          + setId()
          + setMaxmatcle()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace model {
      class edu.pfe.staffing.model.Planning {
          - assignments : List<Assignment>
          - id : long
          + getAssignments()
          + getId()
          + setAssignments()
          + setId()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace model {
      class edu.pfe.staffing.model.Project {
          - budget : double
          - budget_status : String
          - criticality : String
          - id : long
          - name : String
          - project_status : String
          - total_ressources_number : int
          - workload : int
          + Project()
          + Project()
          + getBudget()
          + getBudget_status()
          + getCriticality()
          + getId()
          + getName()
          + getProject_status()
          + getTotal_ressources_number()
          + getWorkload()
          + setBudget()
          + setBudget_status()
          + setCriticality()
          + setId()
          + setName()
          + setProject_status()
          + setTotal_ressources_number()
          + setWorkload()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace model {
      class edu.pfe.staffing.model.Role {
          - id : long
          - name : String
          + getId()
          + getName()
          + setId()
          + setName()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace model {
      class edu.pfe.staffing.model.Team {
          - id : long
          - name : String
          - userList : List<User>
          + getId()
          + getManager()
          + getName()
          + getUserList()
          + setId()
          + setManager()
          + setName()
          + setUserList()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace model {
      class edu.pfe.staffing.model.User {
          - email : String
          - enabled : boolean
          - firstname : String
          - globalUserScore : double
          - id : long
          - lastname : String
          - matcle : String
          - nbrOfProjectsOfUser : int
          - password : String
          - roles : List<Role>
          - speciality : String
          + User()
          + User()
          + getEmail()
          + getFirstname()
          + getGlobalUserScore()
          + getId()
          + getLastname()
          + getMatcle()
          + getNbrOfProjectsOfUser()
          + getOwnedteam()
          + getPassword()
          + getPlanning()
          + getRoleList()
          + getRoles()
          + getSpeciality()
          + getTeam()
          + getnumberofuserprojects()
          + getuserglobalscoreperproject()
          + isenabled()
          + setEmail()
          + setFirstname()
          + setGlobalUserScore()
          + setId()
          + setLastname()
          + setMatcle()
          + setNbrOfProjectsOfUser()
          + setOwnedteam()
          + setPassword()
          + setPlanning()
          + setRoleList()
          + setRoles()
          + setSpeciality()
          + setTeam()
          + setenabled()
          + toString()
          - getalluserproject()
          - getuserperproject()
      }
    }
  }
  

  edu.pfe.staffing.model.Assignment o-- edu.pfe.staffing.model.Planning : planning
  edu.pfe.staffing.model.Assignment o-- edu.pfe.staffing.model.Project : project
  edu.pfe.staffing.model.Project o-- edu.pfe.staffing.model.User : manager
  edu.pfe.staffing.model.Team o-- edu.pfe.staffing.model.User : manager
  edu.pfe.staffing.model.User o-- edu.pfe.staffing.model.Team : Ownedteam
  edu.pfe.staffing.model.User o-- edu.pfe.staffing.model.Planning : planning
  edu.pfe.staffing.model.User o-- edu.pfe.staffing.model.Team : team


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
